--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.1",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
